#
# test/Makefile.am --
#
# Copyright (c) 2008 Juergen Schoenwaelder, Jacobs University Bremen.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1921 2006-05-08 15:14:36Z schoenw $
#

TESTS			= anon-key.test \
			  anon-ipv4.test anon-ipv4-l.test \
			  anon-ipv6.test anon-ipv6-l.test

EXTRA_DIST              = $(TESTS) \
			  anon-key.1.in anon-key.1.out \
			  anon-ipv4.1.in anon-ipv4.1.out \
			  anon-ipv4-l.1.in anon-ipv4-l.1.out \
			  anon-ipv6.1.in anon-ipv6.1.out \
			  anon-ipv6-l.1.in anon-ipv6-l.1.out
